added a few things

--- a/starter_code/select_fun_part_2/index.html
+++ b/starter_code/select_fun_part_2/index.html
@@ -32,7 +32,7 @@
 
 					<div class="box" id="box3">
 						<p>Do something to me</p>
-						<p>I am another paragraph with a beautiful <span>Span inside of me</span></p>
+						<p>I am another paragraph with a beautiful <span class="harry">Span inside of me</span></p>
 					</div>
 
 					<div class="box" id="box4">
